--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
+crate-type = ["lib", "staticlib"]
 name = "my_rust_module"
-crate-type = ["staticlib"]
 
 [dependencies]
+ferris-says = "0.1"
