--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 crate-type = ["lib", "staticlib"]
-name = "my_rust_module"
+name = "rust_module"
 
 [dependencies]
 ferris-says = "0.1"
